Closed Bug 1830724 Opened 2 years ago Closed 2 years ago

Video not working in whereby

Categories

(Core :: WebRTC: Audio/Video, defect, P2)

Desktop
macOS
defect

Tracking

()

VERIFIED FIXED
114 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox112 --- unaffected
firefox113 --- unaffected
firefox114 + verified

People

(Reporter: jimm, Assigned: bwc)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

From the meeting today, latest Nightly.

Severity: -- → S2
Priority: -- → P2

April 25th builds were good. Dan will do some debugging.

STRs:

  1. Enter a room at whereby.com with at least one other participant

Expected results:

  • Other participants can see me
  • I can see all other participants

Actual results:

  • Other participants are receiving black video frames from me
  • I see unaffected participants just fine, but I see other affected participants as a spinner when others see them as black video frames.
Assignee: nobody → docfaraday

I've manually verified that whereby is working with the patches attached here.

Was this a regression from bug 1829667 or something else?

Flags: needinfo?(docfaraday)

Wow. Every one of those try pushes flaked on us.

Flags: needinfo?(docfaraday)
Keywords: regression
Regressed by: 1829667

Set release status flags based on info from the regressing bug 1829667

try seems to be down (but not closed?) right now...

Try should be working again

Flags: needinfo?(docfaraday)

Try looks ok.

Pushed by bcampen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5ad446e5ae60 Test-cases for bug. r=dbaker,jib https://hg.mozilla.org/integration/autoland/rev/a341d442d13e When we allow setParameters to change rids, ensure we set the new ones in SyncToJsep. r=dbaker
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 114 Branch
Regressions: 1832176
Flags: qe-verify+

I am not able to reproduce this issue on macOS 12 using a 2023-05-01 Nightly build.
Byron, would you be so kind to verify that this issue is fixed on the latest beta build on your side? Thank you.

Flags: needinfo?(docfaraday)

Works for me!

Flags: needinfo?(docfaraday)

As per comment 17 I will set as verified fixed on Fx 114.0.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: