Bug 1830724: When we allow setParameters to change rids, ensure we set the new ones in SyncToJsep. r=dbaker

Differential Revision: https://phabricator.services.mozilla.com/D176846